--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <script src="https://kit.fontawesome.com/d02e1cd182.js" crossorigin="anonymous"></script>
-  <title>React App</title>
+  <title>Car Rental</title>
 </head>
 
 <body>
